# Simple-Odometer

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  README_STREAM.md  eim_config.toml  jpeg_receiver.py  sdkconfig  sdkconfig.defaults  sdkconfig.old
.cache/clangd/index/: JPEGDEC.cpp.7C1CA4BE969041C8.idx  JPEGDEC.cpp.A1DE7D3F7A668837.idx  JPEGDEC.cpp.EA827A23B4D4E3F5.idx  JPEGDEC.h.8EBC770BEA85A743.idx  JPEGDEC.h.AB9BAC38A6CD39C7.idx  JPEGDEC.h.DDF46D373D346FC4.idx  _img_1_alpha_20x20.c.9C97BA11EF50EDAB.idx  _img_1_alpha_20x20.c.9EF96A9F964688D6.idx  _img_1_alpha_20x20.c.EF2B986570835989.idx  aes3_tie_log.c.7C9E6B7E14458E27.idx  animimg001.c.0C5F71B678DBE29F.idx  animimg001.c.E32424E67C52D056.idx  (+2157 more)
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
components/read_lcd_id_bsp/: read_lcd_id_bsp.h
components/sd_card_bsp/: sd_card_bsp.c  sd_card_bsp.h
components/touch_bsp/: touch_bsp.c
components/user_app/: CMakeLists.txt  user_app.c  user_app.h
docs/: ARCHITECTURE.md  BLE_MANUAL_TEST_PLAN.md  BLE_PAIRING.md  CO5300_PANEL_OFFSET.md  FRAME_PIPELINE.md  NAV_HUD.md
main/: CMakeLists.txt  ble_pairing.cpp  ble_pairing.h  digits_font.h  example_qspi_with_ram.cpp  idf_component.yml  main.cpp  nav_hud.cpp  nav_hud.h  status_screen.cpp  status_screen.h  stream_config.h  tach_ring.cpp  tach_ring.h  text8x8.c  text8x8.h
tests/: mjpeg_test_server.py  nav_telemetry_sender.py  udp_test_sender.py
tools/: gen_digits.py  host_preview.cpp  preview.sh
(+3 files in other folders)
